--- a/source/components/header.html
+++ b/source/components/header.html
@@ -1,27 +1,34 @@
 <header class="page-header">
-    <a href="#" class="page-header__logo">
-        <img src="img/mishka-logo-mobile.svg.png" width="86" height="35" alt="Логотип Мишка" class="page-header__logo-image">
-    </a>
-    <nav class="page-header__main-nav main-nav">
+    <div class="page-header__wrapper">
+        <a href="#" class="page-header__logo">
+            <img src="img/mishka-logo-mobile.svg.png" width="86" height="35" alt="Логотип Мишка"
+                class="page-header__logo-image">
+        </a>
         <button class="main-nav__toggle">Открыть меню</button>
+    </div>
+    <nav class="page-header__main-nav main-nav">
         <div class="main-nav__wrapper">
-            <ul class="main-nav__list cite-list">
-                <li class="cite-list__item">
-                    <a class="cite-list__link" href="catalog.html">Каталог товаров</a>
-                </li>
-                <li class="cite-list__item">
-                    <a class="cite-list__link" href="form.html">Вязание на заказ</a>
-                </li>
-            </ul>
-            <ul class="main-nav__list user-list">
-                <li class="user-list__item">Поиск по сайту</li>
-                <li class="user-list__item">Корзина: <span>пока пуста</span></li>
-            </ul>
+            <div class="cite-list__wrapper">
+                <ul class="main-nav__list cite-list">
+                    <li class="cite-list__item">
+                        <a class="cite-list__link" href="catalog.html">Каталог товаров</a>
+                    </li>
+                    <li class="cite-list__item">
+                        <a class="cite-list__link" href="form.html">Вязание на заказ</a>
+                    </li>
+                </ul>
+                <ul class="main-nav__list user-list">
+                    <li class="user-list__item">Поиск по сайту</li>
+                    <li class="user-list__item">Корзина: <span>пока пуста</span></li>
+                </ul>
+            </div>
+            <div class="sub-cite-list__wrapper">
+                <ul class="main-nav__list sub-cite-list">
+                    <li class="sub-cite-item">Новые поступления</li>
+                    <li class="sub-cite-item">Распродажа</li>
+                </ul>
+                <small class="main-nav__delivery-info">Бесплатная доставка по России</small>
+            </div>
         </div>
-        <ul>
-            <li>Новые поступления</li>
-            <li>Распродажа</li>
-        </ul>
-        <small class="preview__delivery">Бесплатная доставка по России</small>
     </nav>
 </header>
