--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,6 +1,9 @@
+.features {
+    width: 260px;
+}
+
 .features__title {
-    @include font(25px, 30px);
-    font-weight: 700;
+    @include font(25px, 30px, 700);
 }
 
 .features__list {
@@ -11,6 +14,5 @@
 
 .features__item {
     padding-top: 85px ;
-    @include font(17px, 20px);
-    font-weight: 700;
+    @include font(17px, 20px, 700);
 }
