--- a/source/sass/blocks/preview.scss
+++ b/source/sass/blocks/preview.scss
@@ -1,10 +1,16 @@
+.preview {
+    width: 320px;
+}
+
 .preview__slogan {
     display: block;
-    padding: 72px 37px 150px 37px; 
+    padding: 72px 36px 120px 36px; 
 
-    background-image: url("../img/hero-mobile.jpg");
+    background: $main-color url("../img/hero-mobile.jpg") no-repeat;
+    background-size: cover;
 
-    @include font(27px, 30px);
+    @include font(27px, 30px, 700);
+    text-align: center;
 }
 
 .preview__list {
@@ -13,9 +19,9 @@
 }
 
 .preview__item {
-    padding: 28px 110px 30px 28px;
+    padding: 28px 120px 30px 28px;
 
-    @include font(19px, 24px);
+    @include font(19px, 24px, 700);
     color: #fff;
 
     &--interior {
