Настроен вьюпорт для мобильных, убрана фиксированная ширина

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,5 +1,4 @@
 .page-header__wrapper {
-    width: 320px;
     display: flex;
 }
 
@@ -8,5 +7,5 @@
 }
 
 .page-header__main-nav {
-    width: 320px;
+    // width: 320px;
 }
