--- a/source/components/header.html
+++ b/source/components/header.html
@@ -1,12 +1,10 @@
 <header class="page-header">
-    <div class="page-header__wrapper">
         <a href="#" class="page-header__logo">
             <img src="img/mishka-logo-mobile.svg.png" width="86" height="35" alt="Логотип Мишка"
                 class="page-header__logo-image">
         </a>
-        <button class="main-nav__toggle">Открыть меню</button>
-    </div>
     <nav class="page-header__main-nav main-nav">
+        <button class="main-nav__toggle">Открыть меню</button>
         <div class="main-nav__wrapper">
             <div class="cite-list__wrapper">
                 <ul class="main-nav__list cite-list">
@@ -18,8 +16,8 @@
                     </li>
                 </ul>
                 <ul class="main-nav__list user-list">
-                    <li class="user-list__item">Поиск по сайту</li>
-                    <li class="user-list__item">Корзина: <span>пока пуста</span></li>
+                    <li class="user-list__item user-list__search">Поиск по сайту</li>
+                    <li class="user-list__item user-list__busket">Корзина: <span>пока пуста</span></li>
                 </ul>
             </div>
             <div class="sub-cite-list__wrapper">
