Правки в шапке, превью, товаре дня

--- a/source/components/header.html
+++ b/source/components/header.html
@@ -1,4 +1,5 @@
 <header class="page-header">
+    <div class="page-header__wrapper">
         <a href="#" class="page-header__logo">
             <img src="img/mishka-logo-mobile.svg.png" width="86" height="35" alt="Логотип Мишка"
                 class="page-header__logo-image">
@@ -29,4 +30,5 @@
             </div>
         </div>
     </nav>
+    </div>
 </header>
