--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -16,7 +16,7 @@
 
 .cite-list__item {
     @include indents();
-    border-top: 1px solid #ececec;
+    border-top: 1px solid $light-grey;
     padding-top: 27px;
     padding-bottom: 27px;
     padding-left: 75px;
@@ -30,7 +30,7 @@
 
 .user-list__item {
     @include indents();
-    border-top: 1px solid #ececec;
+    border-top: 1px solid $light-grey;
     padding-top: 27px;
     padding-bottom: 27px;
     padding-left: 75px;
@@ -52,12 +52,12 @@
     .cite-list {
         position: absolute;
         display: flex;
-        padding-left: 12px;
     }
 
     .cite-list__item {
         padding-top: 20px;
-        padding-left: 38px;
+        padding-left: 0px;
+        padding-right: 38px;
         @include font(15px, 24px, 700);
 
     }
@@ -65,7 +65,7 @@
     .user-list {
         position: absolute;
         top: -80px;
-        right: 50px;
+        right: 0px;
         display: flex;
     }
 
@@ -75,8 +75,8 @@
 
     .user-list__search {
         font-size: 0;
-        border-left: 1px solid #ececec;
-        border-right: 1px solid #ececec;
+        border-left: 1px solid $light-grey;
+        border-right: 1px solid $light-grey;
         background: url("../img/search.png") no-repeat center center;
     }
 
@@ -84,7 +84,7 @@
         display: block;
         position: absolute;
         top: 20px;
-        right: 50px;
+        right: 0px;
         @include font(15px, 24px);
         color: $grey;
     }
@@ -93,28 +93,34 @@
 @media (min-width: $desktop-width) {
     .cite-list {
         top: -80px;
-        padding-left: 62px;
+        padding-left: 0px;
     }
 
     .cite-list__item {
         padding-top: 27px;
+        padding-right: 35px;
         @include font(17px, 24px, 700);
     }
 
     .cite-list__item:first-child {
-        padding-right: 35px;
         border-right: 1px solid #ececec;
     }
 
+    .cite-list__item:last-child {
+        padding-left: 35px;
+    }
+
     .user-list {
-        right: 100px;
+        right: 0px;
     }
 
     .sub-cite-list {
         display: flex;
         position: absolute;
         top: 20px;
-        left: 100px;
+        left: 0px;
+
+        @include font(15px, 24px, 700);
     }
 
     .sub-cite-item {
@@ -122,6 +128,6 @@
     }
 
     .main-nav__delivery-info {
-        right: 100px;
+        right: 0px;
     }
 }
