--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -16,13 +16,29 @@
     // width: 320px;
 }
 
+.page-header__wrapper {
+
+    margin: 0 auto;
+}
+
+
 @media (min-width: $tablet-width) {
+    .page-header__wrapper {
+        width: 670px;
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+
     .page-header__logo-image {
-        margin-left: 50px;
+        margin-left: 0px;
     }
 }
 
 @media (min-width: $desktop-width) {
+    .page-header__wrapper {
+        width: 1050px;
+    }
+
     .page-header__logo-image {
         margin-left: auto;
         margin-right: auto;
