--- a/source/sass/blocks/preview.scss
+++ b/source/sass/blocks/preview.scss
@@ -5,7 +5,7 @@
     padding: 72px 36px 0; 
 
     background: #f9f9f9 url("../img/hero-mobile.jpg") no-repeat center -15px;
-    border-top: 1px solid #ececec;
+    border-top: 1px solid $light-grey;
 
     @include font(27px, 30px, 700);
     text-align: center;
@@ -17,7 +17,7 @@
 }
 
 .preview__item {
-    padding: 28px 120px 30px 28px;
+    padding: 29px;
 
     @include font(19px, 24px, 700);
     color: #fff;
@@ -33,10 +33,9 @@
 
 @media (min-width: $tablet-width) {
     .preview__slogan {
-        min-height: 745px;
+        height: 746px;
         padding-top: 155px;
         background: #f9f9f9 url("../img/hero-desktop.jpg") no-repeat center;
-        background-size: contain;
         @include font(43px, 50px, 700);
     }
 
@@ -57,7 +56,7 @@
         flex: 1 0 334px;
         box-sizing: border-box;
         width: 0.5em;
-        padding: 31px 130px 32px 35px;
+        padding: 33px 36px 43px;
     }
 
     .preview__decoration {
