--- a/source/sass/blocks/top-item.scss
+++ b/source/sass/blocks/top-item.scss
@@ -5,8 +5,8 @@
 .top-item__title {
     @include indents();
     @include font(25px, 30px, 700);
-    padding-top: 30px;
-    padding-bottom: 50px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 .top-item__subtitle {
@@ -17,7 +17,7 @@
     color: $light-green;
     
     position: absolute;
-    top: 65px;   
+    top: 35px;   
 }
 
 .top-item__info {
@@ -27,18 +27,12 @@
     margin-bottom: 22px;
 }
 
-.top-item__descriptions {
-    color: $grey;
-    @include font(15px, 24px);
-}
-
 .table {
     @include indents();
     @include font(15px, 20px);
+    color: $grey;
     border-collapse: collapse;
     width: 100%;
-    margin-bottom: 29px;
-
 }
 
 .table__tr {
@@ -58,23 +52,128 @@
     @include indents();
 }
 
-.top-item__price {
-    color: $grey;
-    @include font(17px, 24px, 700);
-}
-
-.top-item__order {
-
-    border: 2px solid $grey;
-    color: $grey;
-    @include font(17px, 24px, 700);
-    text-decoration: none;
-    
-}
-
 @media (min-width: $tablet-width) {
-    .top-item {
-        
+    .table {
+        @include font(15px, 20px)
+        width: 291px;
     }
 }
 
+.top-item__descriptions {
+    margin-bottom: 29px;
+}
+
+.top-item__price {
+    @include font(17px, 24px, 700);
+    color: $grey;
+    margin: 27px 0;
+    text-align: center;
+}
+
+.top-item__order {
+    display: block;
+    box-sizing: border-box;
+    width: 259px;
+    height: 52px;
+    border: 2px solid $grey;
+
+    padding-top: 13px;
+    margin-bottom: 36px;
+    
+    @include font(17px, 20px, 700);
+    color: $grey;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.top-item__zigzag {
+    margin-bottom: 30px;
+}
+
+@media (min-width: $tablet-width) {
+    .top-item__title {
+        @include font(43px, 50px, 700);
+        margin-top: 50px;
+        margin-bottom: 43px;
+    }
+
+    .top-item__subtitle {
+        @include font(17px, 17px, 700);
+        width: 80px;
+        text-align: center;
+        right: 28px;
+        top: 10px;
+
+    }
+
+    .top-item__info {
+        @include font(17px, 30px)
+        width: 291px;
+        margin-bottom: 43px;
+    }
+
+    .top-item__descriptions {
+        margin-bottom: 56px;
+    }
+
+    .top-item__price {
+        @include font(20px, 24px, 700)
+        width: 291px;
+    }
+
+    .top-item__order {
+        width: 291px;
+        margin-bottom: 52px;
+    }
+
+    .top-item__image {
+        position: absolute;
+        display: block;
+        top: 104px;
+        right: 0;
+    }
+}
+
+@media (min-width: $desktop-width) {
+    .top-item__title {
+        @include font(53px, 57px, 700)
+        margin-top: 117px;
+        padding-left: 173px;
+    }
+
+
+    .top-item__subtitle {
+        left: 48px;
+        top: 13px;
+    }
+
+    .top-item__wrapper {
+        margin-left: 176px;
+    }
+
+    .top-item__info {
+        margin-bottom: 63px;
+    }
+
+    .top-item__descriptions {
+        margin-bottom: 110px;
+    }
+
+    .top-item__price {
+        margin-bottom: 32px;
+    }
+
+    .top-item__order {
+        width: 291px;
+        margin-bottom: 72px;
+    }
+
+    .top-item__image {
+        position: absolute;
+        display: block;
+        top: -42px;
+        right: 0;
+        z-index: -1;
+    }
+}
