--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -63,8 +63,8 @@ input[type="radio"].visually-hidden {
 
 .zigzag {
     height: 6px;
-    width: 100%;
-    background: url("../img/zigzag-line-desktop.png") repeat-x;
+    background: url("../img/bg-zigzag-line.svg") repeat-x;
+    background-size: 100% 6px;
 
 }
 
@@ -72,25 +72,36 @@ input[type="radio"].visually-hidden {
     padding-right: 30px;
     padding-left: 30px;
     margin: 0 auto;
-    // position: relative;
+}
+
+.iner-container {
+    margin: 0 auto;
 }
 
 @media (max-width: $tablet-width) {
     .container {
         max-width: 260px;
     }
+
+    .iner-container {
+        width: 320px;
+    }
 }
 
 @media (min-width: $tablet-width) {
     .container {
-        width: 670px;
-        padding-right: 0px;
-        padding-left: 0px;
+        width: 668px;
+        padding-right: 50px;
+        padding-left: 50px;
+    }
+
+    .iner-container {
+        width: 768px;
     }
 
     .zigzag {
         height: 16px;
-        background: url("../img/zigzag-line-desktop-2.png") repeat-x;
+        background-size: 100% 16px;
     
     }
 }
@@ -98,10 +109,16 @@ input[type="radio"].visually-hidden {
 @media (min-width: $desktop-width) {
     .container {
         width: 1050px;
+        padding-right: 100px;
+        padding-left: 100px;
+    }
+
+    .iner-container {
+        width: 1150px;
     }
 
     .zigzag {
         height: 23px;
-        background: url("../img/zigzag-line-desktop-3.png") repeat-x;
+        background-size: 100% 23px;  
     }
 }
