--- a/source/sass/blocks/preview.scss
+++ b/source/sass/blocks/preview.scss
@@ -4,7 +4,7 @@
     min-height: 283px;
     padding: 72px 36px 0; 
 
-    background: #f9f9f9 url("../img/hero-mobile.jpg") no-repeat center -15px;
+    background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat center -15px;
     border-top: 1px solid $light-grey;
 
     @include font(27px, 30px, 700);
@@ -37,7 +37,7 @@
     .preview__slogan {
         height: 746px;
         padding-top: 155px;
-        background: #f9f9f9 url("../img/hero-desktop.jpg") no-repeat center;
+        background: #f9f9f9 url("../img/hero-tablet@1x.jpg") no-repeat center;
         @include font(43px, 50px, 700);
     }
 
@@ -70,7 +70,7 @@
         margin-top: -20px;
         min-height: 20px;
         min-width: 100%;
-        background: url("../img/zigzag-fill-desktoppng.png") repeat-x 0 0px;
+        background: url("../img/bg-zigzag-fill.svg") repeat-x 0 0px;
     }
 }
 
@@ -78,6 +78,8 @@
     .preview__slogan {
         padding-top: 160px;
         @include font(53px, 57px, 700);
+
+        background: #f9f9f9 url("../img/hero-desktop@1x.jpg") no-repeat center;
     }
 
     .preview__wrapper {
