--- a/source/sass/blocks/top-item.scss
+++ b/source/sass/blocks/top-item.scss
@@ -54,7 +54,7 @@
 
 @media (min-width: $tablet-width) {
     .table {
-        @include font(15px, 20px)
+        @include font(15px, 20px);
         width: 291px;
     }
 }
@@ -104,7 +104,7 @@
     }
 
     .top-item__info {
-        @include font(17px, 30px)
+        @include font(17px, 30px);
         width: 291px;
         margin-bottom: 43px;
     }
@@ -114,7 +114,7 @@
     }
 
     .top-item__price {
-        @include font(20px, 24px, 700)
+        @include font(20px, 24px, 700);
         width: 291px;
     }
 
@@ -133,7 +133,7 @@
 
 @media (min-width: $desktop-width) {
     .top-item__title {
-        @include font(53px, 57px, 700)
+        @include font(53px, 57px, 700);
         margin-top: 117px;
         padding-left: 173px;
     }
