--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -10,10 +10,12 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-.page-header__main-nav {
-    // width: 320px;
+    &:hover {
+        opacity: 0.6;
+    }
+    &:active {
+        opacity: 0.3;
+    }
 }
 
 .page-header__wrapper {
