--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,7 @@
 @import "blocks/reviews.scss";
 @import "blocks/contacts.scss";
 @import "blocks/page-footer.scss";
+@import "blocks/product-item.scss";
+@import "blocks/catalog.scss";
+@import "blocks/production-video.scss";
+@import "blocks/form.scss";
